--- a/Projecct/MDK/Objects/KEA128.build_log.htm
+++ b/Projecct/MDK/Objects/KEA128.build_log.htm
@@ -5,10 +5,10 @@
 <h2>Tool Versions:</h2>
 IDE-Version: μVision V5.24.2.0
 Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: l Administrator, l, LIC=UB430-B8NJC-8W52D-8AH09-FT85R-H83X3
+License Information: zhao kun, shandongdaxueweihai, LIC=LSNII-TJN0U-DKNBN-Y6PCP-RG791-5K7PP
  
 Tool Versions:
-Toolchain:       MDK-ARM Professional  Version: 5.24.1
+Toolchain:       MDK-ARM Plus  Version: 5.24.1
 Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 5 (build 528)
 Assembler:       Armasm.exe V5.06 update 5 (build 528)
@@ -21,12 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.26.0
 Dialog DLL:      TARMCM1.DLL V1.13.0.0
  
 <h2>Project:</h2>
-C:\Users\Administrator\Desktop\直立车上手资料\直立车上手资料\当前总程序（注释版）\KEA128\Projecct\MDK\KEA128.uvprojx
+C:\Users\赵坤\Desktop\直立车上手资料\当前总程序（注释版）\KEA128\Projecct\MDK\KEA128.uvprojx
 Project File Date:  01/20/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'KEA128'
+compiling speed.c...
+linking...
+Program Size: Code=13032 RO-data=8616 RW-data=336 ZI-data=1296  
 ".\Objects\KEA128.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
