--- a/Projecct/MDK/Objects/KEA128.build_log.htm
+++ b/Projecct/MDK/Objects/KEA128.build_log.htm
@@ -21,16 +21,55 @@ Target DLL:      Segger\JL2CM3.dll V2.99.26.0
 Dialog DLL:      TARMCM1.DLL V1.13.0.0
  
 <h2>Project:</h2>
-C:\Users\Administrator\Desktop\KEA128\Projecct\MDK\KEA128.uvprojx
-Project File Date:  01/20/2018
+C:\Users\Administrator\Desktop\share\KEA128-Project\Projecct\MDK\KEA128.uvprojx
+Project File Date:  03/03/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'KEA128'
+compiling common.c...
+compiling KEA128_ftm.c...
+compiling KEA128_gpio.c...
+compiling KEA128_irq.c...
+compiling KEA128_adc.c...
+compiling KEA128_flash.c...
+compiling misc.c...
+compiling KEA128_kbi.c...
+compiling KEA128_port.c...
+compiling KEA128_pit.c...
+compiling KEA128_systick.c...
+compiling KEA128_uart.c...
+compiling KEA128_i2c.c...
+compiling KEA128_spi.c...
+compiling SEEKFREE_FUN.c...
+compiling SEEKFREE_MPU6050.c...
+compiling SEEKFREE_IIC.c...
+compiling isr.c...
+compiling main.c...
+compiling nvic.c...
+compiling oled_iic.c...
+compiling protoco.c...
+..\PRJ\protoco.c(50): warning:  #177-D: variable "send_buff"  was declared but never referenced
+  		u8 send_buff[32]={0};
+..\PRJ\protoco.c(91): warning:  #177-D: variable "send_buff"  was declared but never referenced
+  	u8 send_buff[32]={0};
+..\PRJ\protoco.c(122): warning:  #177-D: variable "send_buff"  was declared but never referenced
+  	u8 send_buff[32]={0};
+..\PRJ\protoco.c: 3 warnings, 0 errors
+compiling codetab.c...
+compiling filter.c...
+compiling init.c...
 compiling control.c...
+compiling my_nrf.c...
+compiling angle.c...
+compiling speed.c...
+compiling master.c...
+compiling key.c...
+compiling turn.c...
+compiling COMPUTER.c...
 linking...
-Program Size: Code=13336 RO-data=8616 RW-data=344 ZI-data=1328  
-".\Objects\KEA128.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=13352 RO-data=8616 RW-data=344 ZI-data=1328  
+".\Objects\KEA128.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -44,7 +83,7 @@ Package Vendor: Keil
   C:\Keil_v5\ARM\PACK\Keil\Kinetis_KEAxx_DFP\1.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:18
 </pre>
 </body>
 </html>
