--- a/Projecct/MDK/Objects/KEA128.build_log.htm
+++ b/Projecct/MDK/Objects/KEA128.build_log.htm
@@ -27,6 +27,9 @@ Project File Date:  03/07/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'KEA128'
+compiling control.c...
+linking...
+Program Size: Code=13464 RO-data=8616 RW-data=348 ZI-data=1324  
 ".\Objects\KEA128.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -41,7 +44,7 @@ Package Vendor: Keil
   C:\Keil_v5\ARM\PACK\Keil\Kinetis_KEAxx_DFP\1.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
