--- a/Projecct/MDK/Objects/KEA128.build_log.htm
+++ b/Projecct/MDK/Objects/KEA128.build_log.htm
@@ -21,15 +21,16 @@ Target DLL:      Segger\JL2CM3.dll V2.99.26.0
 Dialog DLL:      TARMCM1.DLL V1.13.0.0
  
 <h2>Project:</h2>
-C:\Users\Administrator\Desktop\2200\Projecct\MDK\KEA128.uvprojx
+C:\Users\Administrator\Desktop\KEA128-Project\Projecct\MDK\KEA128.uvprojx
 Project File Date:  03/19/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'KEA128'
-compiling speed.c...
+compiling main.c...
+compiling control.c...
 linking...
-Program Size: Code=13480 RO-data=8616 RW-data=360 ZI-data=1328  
+Program Size: Code=13508 RO-data=8616 RW-data=360 ZI-data=1328  
 ".\Objects\KEA128.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
