look at description
main function at control.c
not add communication function now

--- a/Projecct/MDK/Objects/KEA128.build_log.htm
+++ b/Projecct/MDK/Objects/KEA128.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  03/25/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'd:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'KEA128'
-compiling speed.c...
+compiling control.c...
 linking...
-Program Size: Code=10896 RO-data=8616 RW-data=348 ZI-data=1284  
+Program Size: Code=8748 RO-data=8616 RW-data=204 ZI-data=1284  
 ".\Objects\KEA128.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
